interoptopus_backend_c/tests/output/my_header.h

typedef struct my_library_context my_library_context;
typedef struct my_library_simpleservice my_library_simpleservice;
typedef enum my_library_ffierror
    {
    MY_LIBRARY_OK = 0,
    MY_LIBRARY_NULL = 100,
    MY_LIBRARY_PANIC = 200,
    MY_LIBRARY_FAIL = 300,
    } my_library_ffierror;
typedef struct my_library_inner
    {
    float x;
    } my_library_inner;
typedef struct my_library_tupled
    {
    uint8_t x0;
    } my_library_tupled;
typedef struct my_library_vec3f32
    {
    float x;
    float y;
    float z;
    } my_library_vec3f32;
typedef uint8_t (*my_library_fptr_fn_u8_rval_u8)(uint8_t x0);
typedef uint32_t (*my_library_fptr_fn_u32_rval_u32)(uint32_t x0);
typedef struct my_library_ffisliceu8
    {
    uint8_t* data;
    uint64_t len;
    } my_library_ffisliceu8;
typedef struct my_library_ffislicemutu8
    {
    uint8_t* data;
    uint64_t len;
    } my_library_ffislicemutu8;
typedef struct my_library_ffioptioninner
    {
    my_library_inner t;
    uint8_t is_some;
    } my_library_ffioptioninner;
typedef struct my_library_myapiv1
    {
    my_library_fptr_fn_pmut_i64_rval_bool ref_mut_option;
    my_library_fptr_fn_Tupled_rval_Tupled tupled;
    } my_library_myapiv1;
typedef struct my_library_ffislicevec3f32
    {
    my_library_vec3f32* data;
    uint64_t len;
    } my_library_ffislicevec3f32;
typedef uint8_t (*my_library_fptr_fn_FFISliceu8_rval_u8)(my_library_ffisliceu8 x0);
typedef void (*my_library_fptr_fn_FFISliceMutu8)(my_library_ffislicemutu8 x0);
typedef my_library_vec3f32 (*my_library_fptr_fn_FFISliceVec3f32_rval_Vec3f32)(my_library_ffislicevec3f32 x0);
bool ref_mut_option(int64_t* x);
my_library_tupled tupled(my_library_tupled x);
uint8_t callback(my_library_fptr_fn_u8_rval_u8 callback, uint8_t value);
my_library_vec3f32 pattern_ffi_slice_2(my_library_ffislicevec3f32 ffi_slice, int32_t i);
void pattern_ffi_slice_3(my_library_ffislicemutu8 slice, my_library_fptr_fn_FFISliceMutu8 callback);
uint8_t pattern_ffi_slice_delegate(my_library_fptr_fn_FFISliceu8_rval_u8 callback);
my_library_vec3f32 pattern_ffi_slice_delegate_huge(my_library_fptr_fn_FFISliceVec3f32_rval_Vec3f32 callback);
my_library_ffioptioninner pattern_ffi_option_1(my_library_ffioptioninner ffi_slice);
my_library_inner pattern_ffi_option_2(my_library_ffioptioninner ffi_slice);
uint8_t pattern_ffi_bool(uint8_t ffi_bool);
void my_api_init_v1(my_library_myapiv1* api);
uint32_t pattern_callback_1(my_library_fptr_fn_u32_rval_u32 callback, uint32_t x);
my_library_ffierror pattern_service_create(my_library_context** context_ptr, uint32_t value);
my_library_ffierror pattern_service_destroy(my_library_context** context_ptr);
uint32_t pattern_service_method(my_library_context* context);
my_library_ffierror pattern_service_method_success_enum_ok(my_library_context* _context);
my_library_ffierror pattern_service_method_success_enum_fail(my_library_context* _context);
my_library_ffierror simple_service_create(my_library_simpleservice** context_ptr, uint32_t x);
my_library_ffierror simple_service_destroy(my_library_simpleservice** context_ptr);
my_library_ffierror simple_service_result(my_library_simpleservice* context_ptr, uint32_t x);
uint32_t simple_service_value(my_library_simpleservice* context_ptr, uint32_t x);
uint8_t simple_service_mut_self(my_library_simpleservice* context_ptr, my_library_ffisliceu8 slice);
void simple_service_mut_self_void(my_library_simpleservice* context_ptr, my_library_ffisliceu8 slice);
uint8_t simple_service_mut_self_ref(my_library_simpleservice* context_ptr, uint8_t* x, uint8_t* _y);
uint8_t simple_service_mut_self_ref_slice(my_library_simpleservice* context_ptr, uint8_t* x, uint8_t* _y, my_library_ffisliceu8 _slice);
my_library_ffierror simple_service_mut_self_ffi_error(my_library_simpleservice* context_ptr, my_library_ffisliceu8 slice);
void simple_service_void(my_library_simpleservice* context_ptr);
uint32_t simple_service_extra_method(my_library_simpleservice* _context);