interoptopus_backend_csharp/benches/Interop.cs


        // Debug - write_function_overloaded 
        public static Vec3f32 pattern_ffi_slice_2(Vec3f32[] ffi_slice, int i) {
            var ffi_slice_pinned = GCHandle.Alloc(ffi_slice, GCHandleType.Pinned);
            var ffi_slice_slice = new FFISliceVec3f32(ffi_slice_pinned, (ulong) ffi_slice.Length);
            try
            {
                return pattern_ffi_slice_2(ffi_slice_slice, i);
            }
            finally
            {
                ffi_slice_pinned.Free();
            }
        }

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pattern_ffi_slice_3")]
        public static extern void pattern_ffi_slice_3(FFISliceMutu8 slice, CallbackSliceMut callback);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pattern_ffi_slice_delegate")]
        public static extern byte pattern_ffi_slice_delegate(CallbackFFISlice callback);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pattern_ffi_slice_delegate_huge")]
        public static extern Vec3f32 pattern_ffi_slice_delegate_huge(CallbackHugeVecSlice callback);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pattern_ffi_option_1")]
        public static extern FFIOptionInner pattern_ffi_option_1(FFIOptionInner ffi_slice);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pattern_ffi_option_2")]
        public static extern Inner pattern_ffi_option_2(FFIOptionInner ffi_slice);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pattern_ffi_bool")]
        public static extern byte pattern_ffi_bool(byte ffi_bool);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "my_api_init_v1")]
        public static extern void my_api_init_v1(out MyAPIv1 api);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pattern_callback_1")]
        public static extern uint pattern_callback_1(MyCallback callback, uint x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pattern_service_create")]
        public static extern FFIError pattern_service_create(out IntPtr context_ptr, uint value);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        /// # Safety
        /// 
        /// This function may only be called with a context returned by a succeeding `pattern_service_create`.
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pattern_service_destroy")]
        public static extern FFIError pattern_service_destroy(out IntPtr context_ptr);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pattern_service_method")]
        public static extern uint pattern_service_method(IntPtr context);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pattern_service_method_success_enum_ok")]
        public static extern FFIError pattern_service_method_success_enum_ok(IntPtr _context);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pattern_service_method_success_enum_fail")]
        public static extern FFIError pattern_service_method_success_enum_fail(IntPtr _context);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_create")]
        public static extern FFIError simple_service_create(out IntPtr context_ptr, uint x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_destroy")]
        public static extern FFIError simple_service_destroy(out IntPtr context_ptr);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_result")]
        public static extern FFIError simple_service_result(IntPtr context_ptr, uint x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_value")]
        public static extern uint simple_service_value(IntPtr context_ptr, uint x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_mut_self")]
        public static extern byte simple_service_mut_self(IntPtr context_ptr, FFISliceu8 slice);

        // Debug - write_function_overloaded 
        public static byte simple_service_mut_self(IntPtr context_ptr, byte[] slice) {
            var slice_pinned = GCHandle.Alloc(slice, GCHandleType.Pinned);
            var slice_slice = new FFISliceu8(slice_pinned, (ulong) slice.Length);
            try
            {
                return simple_service_mut_self(context_ptr, slice_slice);
            }
            finally
            {
                slice_pinned.Free();
            }
        }

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_mut_self_void")]
        public static extern void simple_service_mut_self_void(IntPtr context_ptr, FFISliceu8 slice);

        // Debug - write_function_overloaded 
        public static void simple_service_mut_self_void(IntPtr context_ptr, byte[] slice) {
            var slice_pinned = GCHandle.Alloc(slice, GCHandleType.Pinned);
            var slice_slice = new FFISliceu8(slice_pinned, (ulong) slice.Length);
            try
            {
                simple_service_mut_self_void(context_ptr, slice_slice);
            }
            finally
            {
                slice_pinned.Free();
            }
        }

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_mut_self_ref")]
        public static extern byte simple_service_mut_self_ref(IntPtr context_ptr, ref byte x, out byte _y);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_mut_self_ref_slice")]
        public static extern byte simple_service_mut_self_ref_slice(IntPtr context_ptr, ref byte x, out byte _y, FFISliceu8 _slice);

        // Debug - write_function_overloaded 
        public static byte simple_service_mut_self_ref_slice(IntPtr context_ptr, ref byte x, out byte _y, byte[] _slice) {
            var _slice_pinned = GCHandle.Alloc(_slice, GCHandleType.Pinned);
            var _slice_slice = new FFISliceu8(_slice_pinned, (ulong) _slice.Length);
            try
            {
                return simple_service_mut_self_ref_slice(context_ptr, ref x, out _y, _slice_slice);
            }
            finally
            {
                _slice_pinned.Free();
            }
        }

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_mut_self_ffi_error")]
        public static extern FFIError simple_service_mut_self_ffi_error(IntPtr context_ptr, FFISliceu8 slice);

        // Debug - write_function_overloaded 
        public static FFIError simple_service_mut_self_ffi_error(IntPtr context_ptr, byte[] slice) {
            var slice_pinned = GCHandle.Alloc(slice, GCHandleType.Pinned);
            var slice_slice = new FFISliceu8(slice_pinned, (ulong) slice.Length);
            try
            {
                return simple_service_mut_self_ffi_error(context_ptr, slice_slice);
            }
            finally
            {
                slice_pinned.Free();
            }
        }

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_void")]
        public static extern void simple_service_void(IntPtr context_ptr);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        /// An extra exposed method.
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "simple_service_extra_method")]
        public static extern uint simple_service_extra_method(IntPtr _context);

        // Debug - write_function_overloaded 

    }

    // Debug - write_type_definition_enum 
    /// Documented enum.
    public enum EnumDocumented
    {
        /// Variant A.
        A = 0,
        /// Variant B.
        B = 1,
    }

    // Debug - write_type_definition_composite 
    [Serializable]
    [StructLayout(LayoutKind.Sequential)]
    public partial struct Array
    {
        public byte data0;
        public byte data1;
        public byte data2;
        public byte data3;
        public byte data4;
        public byte data5;
        public byte data6;
        public byte data7;
        public byte data8;
        public byte data9;
        public byte data10;
        public byte data11;
        public byte data12;
        public byte data13;
        public byte data14;
        public byte data15;
    }

    // Debug - write_type_definition_composite 
    [Serializable]
    [StructLayout(LayoutKind.Sequential)]
    public partial struct Empty
    {
    }

    // Debug - write_type_definition_composite 
    [Serializable]
    [StructLayout(LayoutKind.Sequential)]
    public partial struct Genericu32
    {
        public IntPtr x;
    }

    // Debug - write_type_definition_composite 
    [Serializable]
    [StructLayout(LayoutKind.Sequential)]
    public partial struct Genericu8
    {
        public IntPtr x;
    }

    // Debug - write_type_definition_composite 
    [Serializable]
    [StructLayout(LayoutKind.Sequential)]
    public partial struct Inner
    {
        float x;
    }

    // Debug - write_type_definition_composite 
    [Serializable]
    [StructLayout(LayoutKind.Sequential)]
    public partial struct MyAPIv1
    {
        public InteropDelegate_fn_pmut_i64_rval_bool ref_mut_option;
        public InteropDelegate_fn_Tupled_rval_Tupled tupled;
    }

    // Debug - write_type_definition_composite 
    [Serializable]
    [StructLayout(LayoutKind.Sequential)]
    public partial struct Phantomu8
    {
        public uint x;
    }

    // Debug - write_type_definition_composite 
    [Serializable]
    [StructLayout(LayoutKind.Sequential)]
    public partial struct SomeForeignType
    {
        public uint x;
    }
